--- a/index.css
+++ b/index.css
@@ -168,6 +168,12 @@ div.body-image2 {
 	background-size: cover;
 	height: 1400px;
 }
+div.body-image3 {
+	background-image: url("images/vibe5.jpg");
+	background-position: center;
+	background-size: cover;
+	height: 1400px;
+}
 
 .signup-form table tr:first-child  {
 	text-align: center;
